# homelab

./: .gitignore  .yamllint.yaml  CLAUDE.md  PLAN-publish.md  README.md  SETUP.md  helloworld.pp  motd.pp  renovate.json  user.pp
.github/workflows/: validate.yaml
centos/: files.pp  host.pp  ntp1.pp  ssh.pp  user.pp
docs/: backup-plan.md  gitea-migration-plan.md  network.md  nuc-reconnect-plan.md  pihole-ha.md  portfolio-readme.md  restore-runbook.md  tplink-t1600g-recovery.md
k8s/: namespaces.yaml
k8s/argocd/: ingress.yaml  namespace.yaml  networkpolicy.yaml  values.yaml
k8s/cert-manager/: networkpolicy.yaml  values.yaml
k8s/cost-exporter/: configmap-script.yaml  deployment.yaml  externalsecret.yaml  grafana-dashboard.yaml  namespace.yaml  networkpolicy.yaml  service.yaml  servicemonitor.yaml
k8s/external-secrets/: values.yaml
k8s/hermes-briefing/: README.md  values.yaml
k8s/homeassistant/: deployment.yaml  grafana-dashboard.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  service.yaml
k8s/longhorn/: recurring-snapshots.yaml
k8s/metallb/: README.md  namespace.yaml
k8s/monitoring/: README.md  ingress.yaml  networkpolicy.yaml  values.yaml
k8s/ollama/: networkpolicy.yaml  values.yaml
k8s/openclaw/: README.md  auth.yaml  ingress.yaml  ip-allowlist.yaml  values.yaml
k8s/pihole/: custom-dns.yaml  deployment.yaml  externalsecret.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  (+1 more)
kvm/: console_grub.sh  virsh-install.sh  virt-address.sh
tools/ha-discovery/: ha_client.py  pyproject.toml  server.py
ubuntu/: ntp1.pp  user.pp
(+62 files in other folders)
