[project]
name = "ha-discovery"
version = "0.1.0"
description = "MCP server for Home Assistant device discovery and config flows"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
